--- a/www/base/src/styles/colors.less
+++ b/www/base/src/styles/colors.less
@@ -106,6 +106,11 @@ pre.log {
     background-color: #EEE;
     border-color: #ACA0B3;
 }
+&.results_BUNDLES {
+    color: #EEE;
+    background-color: #3a02f6;
+    border-color: #ACA0B3;
+}
 }
 .panel,.badge-status {
 &.results_SUCCESS {
@@ -133,6 +138,9 @@ pre.log {
     border-color: #ACA0B3;
 }
 &.results_UNKNOWN {
+    border-color: #ACA0B3;
+}
+&.results_BUNDLES {
     border-color: #ACA0B3;
 }
 }
