--- a/www/guanlecoja-ui/src/module/page_with_sidebar/page_with_sidebar.less
+++ b/www/guanlecoja-ui/src/module/page_with_sidebar/page_with_sidebar.less
@@ -15,9 +15,9 @@
     bottom: 0;
     /* theme */
     .sidebar.sidebar-blue {
-        background: #30426a;
+        background: #2e3649;
         ul .sidebar-main, .sidebar-footer, a:hover {
-            background: #273759;
+            background: #2e3649;
         }
         ul .sidebar-title {
             color: #627cb7;
