--- a/www/guanlecoja-ui/src/module/page_with_sidebar/page_with_sidebar.tpl.jade
+++ b/www/guanlecoja-ui/src/module/page_with_sidebar/page_with_sidebar.tpl.jade
@@ -3,10 +3,10 @@
         ul
             li(style="text-indent:5px")
                 img(src="https://i.ibb.co/MCvGxVm/Logo-3.png" alt="background" border="0" style="width:85%;margin: 10px;image-rendering: pixelated;")
-            li.sidebar-title(style="font-size:20px")
-                a(href='javascript:')
-                    | {{page.appTitle}}
-                    span.menu-icon.fa.fa-bars(ng-hide="page.sidebarActive", ng-click='page.sidebarActive=!page.sidebarActive')
+            //li.sidebar-title(style="font-size:20px")
+            //    a(href='javascript:')
+            //        | {{page.appTitle}}
+            //        span.menu-icon.fa.fa-bars(ng-hide="page.sidebarActive", ng-click='page.sidebarActive=!page.sidebarActive')
             li.sidebar-title
                 span NAVIGATION
             div(ng-repeat="group in page.groups")
@@ -33,6 +33,6 @@
         //    .col-xs-4(ng-repeat="item in page.footer")
         //        a(ng-href='{{item.href}}')
         //            | {{item.caption}}
-        img(src="https://i.ibb.co/Yjm7St0/background.png" alt="background" border="0" style="width:100%;image-rendering: pixelated;bottom:0;position:absolute;")
+        img(src="https://i.ibb.co/Yjm7St0/background.png" alt="background" border="0" style="width:100%;image-rendering: pixelated;bottom:0;position:absolute;z-index:-1;")
     .content
         div(ng-transclude)
