--- a/www/guanlecoja-ui/src/module/page_with_sidebar/page_with_sidebar.tpl.jade
+++ b/www/guanlecoja-ui/src/module/page_with_sidebar/page_with_sidebar.tpl.jade
@@ -2,7 +2,8 @@
     .sidebar.sidebar-blue(ng-mouseenter='page.enterSidebar()',ng-mouseleave='page.leaveSidebar()',ng-click='page.sidebarActive=true')
         ul
             li(style="text-indent:5px")
-                img(src="https://i.ibb.co/MCvGxVm/Logo-3.png" alt="background" border="0" style="width:85%;margin: 10px;image-rendering: pixelated;")
+                // https://www.sitepoint.com/why-hosting-your-svgs-is-hard-and-how-to-beat-it/
+                img(src="https://gistcdn.githack.com/PetrBodnar/0e4adf4b2814db91a12e27783dcae252/raw/235dc583a3120caa15de8ea78a71ba55908ba677/logo_lightmap.svg" alt="background" border="0" style="width:85%;margin: 10px;image-rendering: pixelated;")
             //li.sidebar-title(style="font-size:20px")
             //    a(href='javascript:')
             //        | {{page.appTitle}}
